Spacing fix.

--- a/styles.css
+++ b/styles.css
@@ -425,13 +425,16 @@ main {
     color: #72d8f1;
 }
 
+.card-title {
+    margin-top: -0.1vw;
+}
+
 .card-crew {
     text-align: center;
     font-size: 2.5vw;
     font-family: 'Rajdhani', sans-serif;
     color: #72d8f1;
     margin-right: 0.5vw;
-    padding-top: 0.1vw;
 }
 
 .card-subtitle {
